--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
